@@ -1,4 +1,5 @@
 0.06
+ - Add doc for Wikibase::Datatype::Print::Sitelink.
 
 0.05 2023-04-15T00:49:16+02:00
  - Add doc for Wikibase::Datatype::Print::Utils.
